fixed post spacing

--- a/wp-content/plugins/northbuzz-widget/css/style.css
+++ b/wp-content/plugins/northbuzz-widget/css/style.css
@@ -9,11 +9,17 @@
 
     .nb-widget-pic-full-width div{
         padding: 0;
+        margin-bottom: 40px;
+        margin-top: 40px;
     }
 
     .nb-widget-pic-two div{
         padding: 0;
 
+    }
+
+    .nb-widget-pic-two{
+        margin-bottom: 20px;
     }
 }
 @media screen and (min-width:576px){
@@ -23,10 +29,13 @@
         padding-right: 0;
         padding-top: 5px;
         padding-bottom: 5px;
+        margin-bottom: 40px;
+        margin-top: 40px;
     }
     .nb-widget-pic-two div{
         padding-bottom: 5px;
         padding-top: 5px;
+        margin-bottom: 40px;
     }
 
     .nb-widget-pic-two div:nth-child(1){
@@ -39,5 +48,11 @@
         padding-left: 5px;
     }
     
+    #nb-single-post-container p{
+        max-width: 600px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
 }
+
