--- a/wp-content/themes/wp-bootstrap/style.css
+++ b/wp-content/themes/wp-bootstrap/style.css
@@ -171,17 +171,16 @@ p {
     color: white;
 }
 
-#single-the-content-container{
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-}
 
 #featured-post-container .jumbotron p, #featured-post-container .jumbotron h1{
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
 
+}
+
+#post-image{
+    margin-bottom: 20px;
 }
 
 @media screen and (max-width:640px){
@@ -197,6 +196,10 @@ p {
 }
 
 @media screen and (min-width:640px){
+    #post-image{
+        margin-bottom: 50px;
+    }
+    
 
     #carousel-1 .carousel-inner{
         height: 600px;
